network-policy-info/template_ingress_network_policy_outsidek8s.yml
#Network Policy
#allows only connections by IP, generally used in the case of resources outside a K8s environment 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec: 
  podSelector:
    matchlabels:
      role: db
  policyTypes:
    - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.5.10/32
    ports:
    - protocol: TCP
      port: 3306
